--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "yarn": ">= 0.18.0"
   },
   "cacheDirectories": [
-    "node_modules",
-    "react-ui/node_modules"
+    "frontend/node_modules",
+    "backend/node_modules"
   ],
   "keywords": [
     "Feathersj",
