--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@feathersjs/client": "^3.7.8",
     "moment": "^2.24.0",
-    "react": "^16.8.0-alpha.1",
-    "react-dom": "^16.8.0-alpha.1",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "react-scripts": "2.1.3",
     "socket.io-client": "^2.2.0"
   },
