--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@feathersjs/client": "^3.7.8",
     "moment": "^2.24.0",
+    "node-sass": "^4.11.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-scripts": "2.1.3",
