--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@feathersjs/client": "^3.7.8",
+    "formik": "^1.5.0",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-scripts": "2.1.3",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "yup": "^0.26.10"
   },
   "scripts": {
     "start": "react-scripts start",
