--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "node-sass": "^4.11.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "react-perfect-scrollbar": "^1.4.4",
     "react-scripts": "2.1.3",
     "socket.io-client": "^2.2.0",
     "yup": "^0.26.10"
