--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@feathersjs/client": "^3.7.8",
+    "classnames": "^2.2.6",
     "formik": "^1.5.0",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
