feat: another refactor that I'm to lazy to specify :D

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.0",
+    "react-cache": "^2.0.0-alpha.1",
     "react-dom": "^16.8.0",
     "react-perfect-scrollbar": "^1.4.4",
     "react-router-dom": "^4.3.1",
