--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^16.8.0",
     "react-perfect-scrollbar": "^1.4.4",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.3",
     "socket.io-client": "^2.2.0",
     "yup": "^0.26.10"
   },
