--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "socket.io-client": "^2.2.0",
+    "uifx": "^2.0.6",
     "yup": "^0.26.10"
   },
   "scripts": {
